--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,5 +40,10 @@
         <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
         <ion-label>Theme Your App</ion-label>
       </ion-item>
+      <ion-item (click)="sub()">
+        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
+        <ion-label>Theme Your App</ion-label>
+      </ion-item>
     </ion-list>
+    
 </ion-content>
