--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Case Upload</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      Case Upload
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
