--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,13 @@
-<ion-item>
-  <ion-label position="fixed">Username</ion-label>
-  <ion-input></ion-input>
-</ion-item>
-<ion-item>
-  <ion-label position="fixed">Password</ion-label>
-  <ion-input></ion-input>
-</ion-item>
-<ion-button (click)="submit()">
-  <ion-icon slot="icon-only" name="star"></ion-icon>
-</ion-button>
+<form (submit)="submit()">
+  <ion-item>
+    <ion-label position="fixed">Username</ion-label>
+    <ion-input type="text" [(ngModel)]="formData.p_usr_username" name="p_usr_username"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="fixed">Password</ion-label>
+    <ion-input type="text" [(ngModel)]="formData.p_usr_password" name="p_usr_password"></ion-input>
+  </ion-item>
+  <ion-button (click)="submit()">
+    <ion-icon slot="icon-only" name="star"></ion-icon>
+  </ion-button>
+</form>
