--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -10,10 +10,12 @@
 </ion-header>
 
 <ion-content>
+  <ion-searchbar></ion-searchbar>
+
   <ion-list>
     <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
       {{item.title}}
+      
       <div class="item-note" slot="end">
         {{item.note}}
       </div>
