better attach button

--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -23,8 +23,8 @@
               <ion-input name="name" type="text" placeholder="Name" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-                <ion-label>Attach Case File:</ion-label>
-                <ion-button>Upload</ion-button>
+                <ion-label>Case File:</ion-label>
+                <ion-button color="primary" shape="round" fill="outline">Attach</ion-button>
               </ion-item>
           </div>
 
