--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -20,12 +20,18 @@
           <div padding>
             <ion-item>
               <ion-label>Case Name:</ion-label>
-              <ion-input name="name" type="text" placeholder="Name" ngModel required></ion-input>
+              <ion-input name="caseName" type="text" placeholder="What will we call your case?" ngModel required>
+              </ion-input>
             </ion-item>
             <ion-item>
-                <ion-label>Case File:</ion-label>
-                <ion-button color="primary" shape="round" fill="outline">Attach</ion-button>
-              </ion-item>
+              <ion-label>Case Description:</ion-label>
+              <ion-textarea rows="6" cols="20" maxlength="500" name="caseName" type="text" placeholder="Give a short description of your case" ngModel
+                required></ion-textarea>
+            </ion-item>
+            <ion-item>
+              <ion-label>Case File:</ion-label>
+              <ion-button color="primary" shape="round" fill="outline">Attach</ion-button>
+            </ion-item>
           </div>
 
         </ion-col>
