Added new route and added elements to case page

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -16,7 +16,7 @@
     <ion-item *ngFor="let item of items">
       {{item.title}}
       
-      <div class="item-note" slot="end">
+      <div class="item-note" slot="end" [routerDirection]="'root'" [routerLink]="'/case/' + item.url">
         {{item.note}}
       </div>
     </ion-item>
