--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -13,11 +13,12 @@
   <ion-searchbar></ion-searchbar>
 
   <ion-list>
-    <ion-item *ngFor="let item of items">
-      {{item.title}}
+    <ion-item *ngFor="let item of caseList" [routerDirection]="'root'" [routerLink]="'/case/' + item.GetCase">
+      {{item.Subject}} by {{item.Author}}<br >
+      {{item.Date}} 
       
-      <div class="item-note" slot="end" [routerDirection]="'root'" [routerLink]="'/case/' + item.url">
-        {{item.note}}
+      <div class="item-note" slot="end">
+        {{item.GetCase}}
       </div>
     </ion-item>
   </ion-list>
