--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -13,7 +13,7 @@
   <ion-searchbar></ion-searchbar>
 
   <ion-list>
-    <ion-item *ngFor="let item of caseList" [routerDirection]="'root'" [routerLink]="'/case/' + item.GetCase">
+    <ion-item *ngFor="var item of caseList" [routerDirection]="'root'" [routerLink]="'/case/' + item.GetCase">
       {{item.Subject}} by {{item.Author}}<br >
       {{item.Date}} 
       
