general UI improvements

--- a/src/app/case/case.page.html
+++ b/src/app/case/case.page.html
@@ -1,9 +1,24 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>case</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+    <ion-toolbar>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>
+        Case View
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
 <ion-content>
 
+    <ion-card>
+        <ion-card-header>
+          <ion-card-title>CASE #22</ion-card-title>
+        </ion-card-header>
+      
+        <ion-card-content>
+          this is a short description of the case
+        </ion-card-content>
+      </ion-card>
+
+      <ion-button>Download</ion-button>
 </ion-content>
