--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -10,17 +10,31 @@
 </ion-header>
 
 <ion-content>
-  <div padding>
+
+
+  <ion-row>
+    <ion-col size="9">
       <ion-searchbar></ion-searchbar>
+    </ion-col>
+    <ion-col size="3">
+      <ion-select placeholder="Select One">
+        <ion-select-option value="f">Female</ion-select-option>
+        <ion-select-option value="m">Male</ion-select-option>
+      </ion-select>
+    </ion-col>
+  </ion-row>
+
+  <div padding>
   </div>
 
   <ion-list>
     <ion-item *ngFor="let item of caseList" [routerDirection]="'root'" [routerLink]="'/case/' + item.GetCase">
-      {{item.Subject}} by {{item.Author}}<br >
-      {{item.Date}} 
-      
+      {{item.Subject}} by {{item.Author}}<br>
       <div class="item-note" slot="end">
         {{item.GetCase}}
+        <br>
+        {{item.Date}}
+
       </div>
 
     </ion-item>
