--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -12,14 +12,29 @@
 <ion-content>
 
 
+
   <ion-row>
+
     <ion-col size="9">
-      <ion-searchbar></ion-searchbar>
+
+
+        <ion-searchbar [(ngModel)]="searchQuery" (keyup.enter)="search($event)" #searchBar value='sy'></ion-searchbar>
+
+
+
     </ion-col>
+
+
+
+
     <ion-col size="3">
-      <ion-select placeholder="Select One">
-        <ion-select-option value="f">Female</ion-select-option>
-        <ion-select-option value="m">Male</ion-select-option>
+      <ion-label>Search By</ion-label>
+
+      <ion-select value="lastname" okText="Okay" cancelText="Dismiss" #filterChoice
+        [(ngModel)]="choice">
+        <ion-select-option value="keyword">Keyword</ion-select-option>
+        <ion-select-option value="id">ID</ion-select-option>
+        <ion-select-option value="lastname">Lastname</ion-select-option>
       </ion-select>
     </ion-col>
   </ion-row>
