Adding to heroku

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -18,7 +18,7 @@
     <ion-col size="9">
 
 
-        <ion-searchbar [(ngModel)]="searchQuery" (keyup.enter)="search($event)" #searchBar value='sy'></ion-searchbar>
+        <ion-searchbar [(ngModel)]="searchQuery" (keyup.enter)="search($event)" #searchBar value='Khemraj'></ion-searchbar>
 
 
 
