--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -41,7 +41,9 @@
 
   <div padding>
   </div>
-
+  <ion-item>
+    
+  </ion-item>
   <ion-list>
     <ion-item *ngFor="let item of caseList" [routerDirection]="'root'" [routerLink]="'/case/' + item.GetCase">
       {{item.Subject}} by {{item.Author}}<br>
