--- a/src/app/case/case.page.html
+++ b/src/app/case/case.page.html
@@ -3,14 +3,15 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>case {{str}}</ion-title>
+    <ion-title>Case {{str}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Project Title</ion-card-title>
+      <ion-card-title>SIG: {{case.case_header.SIG}}</ion-card-title>
+      <ion-card-subtitle>Author: {{case.case_header.CaseAuthor}}</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
