Alterign search result final link

--- a/src/app/case/case.page.html
+++ b/src/app/case/case.page.html
@@ -65,6 +65,7 @@
       <ion-select-option value="4">Excellent
       </ion-select-option>
     </ion-select>
-    <input type="submit" name="p_attachOrReply" value="Send-Rating" (click)="submitRating()">
   </ion-item>
+  <ion-button expand="block" (click)="submitRating()">Submit Rating</ion-button>
+
 </ion-content>
