fixed typos changed icons on sidemenu

--- a/src/app/find-users/find-users.component.html
+++ b/src/app/find-users/find-users.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Case List
+      All Users
     </ion-title>
   </ion-toolbar>
 </ion-header>
