--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Case List
+      Case Upload
     </ion-title>
   </ion-toolbar>
 </ion-header>
