--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,18 +11,42 @@
 
 <ion-content>
 
-  <ion-text color="secondary">
+  <ion-card>
+    <ion-card-header>
+      <ion-card-subtitle>ECommunity Knowledge Base</ion-card-subtitle>
+      <ion-card-title>Welcome to Bonnet Mobile</ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+
+
+        Swipe in from the left to view cases, upload your own, 
+        view all the users in this system, and register for Bonnet!
+
+      
+
+    </ion-card-content>
+  </ion-card>
+
+
+
+
+  <!--
+     <ion-text color="secondary">
     <h1>Welcome to Bonnet Mobile</h1>
   </ion-text>
 
-  <!--
+  
   <ion-button color="primary" (click)="sub()">Login</ion-button>
 
-  -->
-  <ion-text color="primary">
-    <h3>Swipe in from the left to view student cases and upload your own</h3>
-  </ion-text>
   
+  <ion-text color="primary">
+      <h3>Swipe in from the left to view student cases and upload your own</h3>
+    </ion-text>
+
+  -->
+ 
+
 
 
 </ion-content>
