--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -10,4 +10,48 @@
 </ion-header>
 <ion-content>
 
+  <ion-content color="primary">
+    <form #form="ngForm" (ngSubmit)="register(form)">
+      <ion-grid>
+        <ion-row color="primary" justify-content-center>
+          <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
+            <div text-center>
+              <h3>Create your Bonnet Account!</h3>
+            </div>
+            <div padding>
+              <ion-item>
+                <ion-input name="p_usr_fname" type="text" placeholder="First name" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="p_usr_lname" type="text" placeholder="Last name" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="p_usr_username" type="text" placeholder="Username" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="p_community_pin" type="number" placeholder="ECommunity PIN #" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="p_usr_email" type="email" placeholder="your@email.com" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="p_usr_password" type="password" placeholder="Password" ngModel required></ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-input name="p_usr_password2" type="password" placeholder="Password again" ngModel required>
+                </ion-input>
+              </ion-item>
+            </div>
+            <div padding>
+              <ion-button color="light" size="large" type="submit" [disabled]="form.invalid" expand="block">Register
+              </ion-button>
+            </div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </form>
+  </ion-content>
+
+
+
 </ion-content>
