fixed case upload

--- a/src/app/upload/upload.page.html
+++ b/src/app/upload/upload.page.html
@@ -67,7 +67,7 @@
 
             <ion-item>
               <ion-label>URL:</ion-label>
-              <ion-input name="p_url" type="text" placeholder="Is there a relevant URL?" ngModel required>
+              <ion-input name="p_url" type="text" placeholder="Is there a relevant URL?" ngModel>
               </ion-input>
             </ion-item>
 
