made labels for register page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,42 +15,30 @@
    </ion-text>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>David Dataram</ion-card-title>
+      <ion-card-title>David</ion-card-title>
     </ion-card-header>
   
-    <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
-    </ion-card-content>
+    
   </ion-card>
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Deepak Khemraj</ion-card-title>
+      <ion-card-title>Deepak</ion-card-title>
     </ion-card-header>
   
-    <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
-    </ion-card-content>
+   
   </ion-card>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Dong</ion-card-title>
     </ion-card-header>
   
-    <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
-    </ion-card-content>
+   
   </ion-card>
   <ion-card>
     <ion-card-header>
       <ion-card-title>Nazmul</ion-card-title>
     </ion-card-header>
   
-    <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
-    </ion-card-content>
+   
   </ion-card>
 </ion-content>
