--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -20,24 +20,33 @@
             </div>
             <div padding>
               <ion-item>
+                <ion-label>First Name</ion-label>
                 <ion-input name="p_usr_fname" type="text" placeholder="First name" ngModel required></ion-input>
               </ion-item>
               <ion-item>
+                <ion-label>Last Name</ion-label>
                 <ion-input name="p_usr_lname" type="text" placeholder="Last name" ngModel required></ion-input>
               </ion-item>
               <ion-item>
+                  <ion-label>Username</ion-label>
                 <ion-input name="p_usr_username" type="text" placeholder="Username" ngModel required></ion-input>
               </ion-item>
               <ion-item>
+                  <ion-label>ECommunity PIN</ion-label>
                 <ion-input name="p_community_pin" type="number" placeholder="ECommunity PIN #" ngModel required></ion-input>
               </ion-item>
               <ion-item>
+                  <ion-label>Email</ion-label>
                 <ion-input name="p_usr_email" type="email" placeholder="your@email.com" ngModel required></ion-input>
               </ion-item>
               <ion-item>
+                  <ion-label>Password</ion-label>
+
                 <ion-input name="p_usr_password" type="password" placeholder="Password" ngModel required></ion-input>
               </ion-item>
               <ion-item>
+                  <ion-label>Confirm &nbsp;&nbsp;  </ion-label>
+
                 <ion-input name="p_usr_password2" type="password" placeholder="Password again" ngModel required>
                 </ion-input>
               </ion-item>
